--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
   "dependencies": {
     "express": "^4.17.2",
     "express-winston": "^4.2.0",
+    "web3": "^1.6.1",
+    "web3-providers-ws": "^1.6.1",
     "winston": "^3.3.3"
   }
 }
