Update AWS credential fetching

--- a/compose.yml
+++ b/compose.yml
@@ -1,8 +1,4 @@
 version: "3.7"
-secrets:
-  aws_creds:
-    file: $HOME/.aws/credentials
-
 services:
   app:
     platform: linux/amd64
@@ -16,16 +12,12 @@ services:
       PORT: 80
       NODE_ENV: production
       SQS_QUEUE_URL: https://sqs.us-west-2.amazonaws.com/016619982582/rebase_beacon_queue
-    secrets:
-    - source: aws_creds
-      target: /root/.aws/credentials
-      uid: '1000'
-      gid: '1000'
-      mode: 0700
     logging:
       driver: awslogs
       options:
         awslogs-region: us-west-2
+    x-aws-policies:
+      - arn:aws:iam::016619982582:policy/ECSTaskPolicy
     deploy:
       replicas: 1
       resources:
